--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
 <p>Welcome <%= @email %> to Bloccitoff, the to-do list that will change your life!</p>
 
-<p>Please confirm your account email through the link below:</p>
+<p>Please confirm that this is your e-amil address and that your username is <%= @username %>:</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
