--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,20 @@
       <br />
         <div class="media-left">
           <h2>Welcome to Blocitoff</h2>
-          <p>You are about to undergo a life transformation, through Blocitoff. Are you excited? You should be.
+          <p>You are about to undergo a life transformation through Blocitoff. Are you excited? You should be.
 
-            <br />This to-do list is going to change the way you learn, laugh, love, and live.</p>
+            <br />Blocitoff is going to change the way you learn, laugh, love, and live.</p>
         </div>
         <p>Username: <%= current_user.username %></p>
         <p>E-Mail Address: <%= current_user.email %></p>
+        <% if current_user %>
+        <%= render 'items/form', item: Item.new, user: @user %>
+        <% end %>
+      <div>
+        <h3>Activities</h3>
+        <% @user.items.each do |item| %>
+          <%= render partial: 'items/item', locals: {item: item} %>
+        <% end %>
+      </div>
   </div>
 </div>
