--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,5 @@
-<h3>Add an Activity</h4>
-<%= form_for [user, item] do |f| %>
+<h3>Add an Activity</h3>
+<%= form_for [current_user, item], remote: true do |f| %>
   <div class="form-group">
     <%= f.label :name, class: 'sr-only' %>
     <%= f.text_field :name, class: 'form-control', placeholder: "Add your new item" %>
