--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -3,7 +3,7 @@
   <div class="media-body">
     <p><%= item.name %> </p>
     <small>
-      added at <%= time_ago_in_words(item.created_at) %>
+      added <%= distance_of_time_in_words(item.created_at, Time.now, options = {}) %> ago
     | <%= link_to "Activity Completed", [current_user, item], method: :delete, remote: true, class: 'glyphicon glyphicon-ok' %>
     </small>
   </div>
