Extra Credit WIP

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -4,7 +4,7 @@
     <p><%= item.name %> </p>
     <small>
       added <%= distance_of_time_in_words(item.created_at, Time.now, options = {}) %> ago
-    | <%= link_to "Activity Completed", [current_user, item], method: :delete, remote: true, class: 'glyphicon glyphicon-ok' %>
+    | <%= link_to "Activity Completed", [current_user, item], method: :delete, remote: true, class: 'glyphicon' %>
     </small>
   </div>
 </div>
